# tauri-react-tailwind-shadcn

./: README.md  package-lock.json  package.json
src/: App.tsx  globals.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
